# mcf-strategy

./: .gitignore  README.md  main.py  pyproject.toml
output/: momentum_report.html
src/momentum/: charts.py  config.py  data.py  features.py  portfolio.py  report.py  utils.py
src/momentum/templates/: report.html.j2
