[project]
name = "mcf-momentum-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "lxml>=5.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyarrow>=17.0.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentum"]
